fixes galleries being too small

--- a/it161/fp/css/main.css
+++ b/it161/fp/css/main.css
@@ -102,7 +102,6 @@ em {
 }
 
 .body-content img {
-    object-fit: contain;
     max-width: 100%;
 }
 
